# src/cars/cars-routes.js
@@ -9,8 +9,6 @@ module.exports = app => {
 
     router.delete("/cars/delete/:id", jwtMiddleware.checkJwtTokenMiddleware, cars.deleteCar); // path to delete a car
 
-    router.delete("/cars/delete", jwtMiddleware.checkJwtTokenMiddleware, cars.deleteAllCar); // path to delete all car
-
     router.get("/cars/get/:id", cars.getCar); // path to get a car
 
     router.get("/cars/get", cars.getAllCar); // path to get all cars
